# InvisID

./: .env.template  .env_example  .gitignore  Dockerfile  EXECUTION_PLAN.md  PROJECT_SUMMARY.md  README.md  SECURITY_REPORT.md  devenv.nix  repro_signature.py  sonar-project.properties
app/: config.py  main.py  pyproject.toml
app/dependencies/: auth.py
app/middleware/: rate_limit.py  security_headers.py
app/models/: schemas.py
app/routers/: admin.py  auth.py  images.py  investigate.py  jobs.py  logs.py  security.py  stress_test.py
app/services/: __init__.py  image_service.py
app/services/cryptography/: crypto_service.py  key_manager.py
app/static/: index.html  robots.txt
app/static/admin/: audit_logs.html  dashboard.html  investigation.html  stress_test.html  trash.html
app/static/user/: gallery.html
app/tests/: test_api.py
app/utils/: crypto.py  db.py  instance.py  logging.py
plans/: fix_investigation.md
scripts/: analog_hole_test.py  attack_simulator.py  check_imwatermark.py  clear_db.sh  forensic_check.py  forensic_medium_test.py  forensic_quick_test.py  forensic_test.py  forensic_ultimate_test.py  measure_psnr.py  repro_failure.py  test_3rd_asset.py
storage/: invisid.db
storage/uploads/: watermarked_EMP-001_OIP-2992093207.jpg.exif  watermarked_EMP-001_sebastian-svenson-d2w-_1LJioQ-unsplash.jpg.exif  watermarked_admin_dark-waves.jpg.exif
tests/: conftest.py  test_api.py  test_security.py  test_services.py
